--- a/tests/dummy/app/components/history-trail/template.hbs
+++ b/tests/dummy/app/components/history-trail/template.hbs
@@ -1,3 +1,5 @@
 {{#each history.history as |entry|}}
-  [{{entry.route}}: {{entry.params}}]
+  <a {{action "returnTo" entry}} href="#">
+    [{{entry.route}}: {{entry.params}}]
+  </a>
 {{/each}}
