Expose `entries` as public API

--- a/tests/dummy/app/components/history-trail/template.hbs
+++ b/tests/dummy/app/components/history-trail/template.hbs
@@ -1,4 +1,4 @@
-{{#each history.history as |entry|}}
+{{#each history.entries as |entry|}}
   <a {{action "returnTo" entry}} href="#">
     [{{entry.route}}: {{entry.params}}]
   </a>
